crates/nfdl-syntax/tests/snapshots/bitfield_if_snapshots__bitfield_width_out_of_range_errors.snap
---
source: crates/nfdl-syntax/tests/bitfield_if_snapshots.rs
assertion_line: 73
expression: err
---
Syntax(
    "bitfield width must be in 1..=64, got 0",
)
