crates/nfdl-syntax/tests/snapshots/bitfield_if_snapshots__conditional_field_rejects_rem.snap
---
source: crates/nfdl-syntax/tests/bitfield_if_snapshots.rs
assertion_line: 100
expression: err
---
Syntax(
    "StreamRemControlFlow: __rem forbidden in conditional field (layout-affecting)",
)
