crates/nfdl-syntax/tests/snapshots/bitfield_if_snapshots__conditional_if_requires_expr.snap
---
source: crates/nfdl-syntax/tests/bitfield_if_snapshots.rs
expression: err
---
Syntax(
    "bad primary: Semicolon",
)
