crates/nfdl-syntax/tests/snapshots/bitfield_if_snapshots__snapshot_bitfield_and_if_together.snap
---
source: crates/nfdl-syntax/tests/bitfield_if_snapshots.rs
assertion_line: 61
expression: field_view(src)
---
[
    (
        "present",
        Bitfield {
            bits: 1,
        },
        None,
    ),
    (
        "payload",
        U16,
        Some(
            "Binary { op: Eq, left: Ident(\"present\"), right: Int(1) }",
        ),
    ),
]
