crates/nfdl-syntax/tests/snapshots/bitfield_if_snapshots__snapshot_bitfield_message.snap
---
source: crates/nfdl-syntax/tests/bitfield_if_snapshots.rs
assertion_line: 33
expression: field_view(src)
---
[
    (
        "version",
        Bitfield {
            bits: 4,
        },
        None,
    ),
    (
        "ihl",
        Bitfield {
            bits: 4,
        },
        None,
    ),
    (
        "tos",
        U8,
        None,
    ),
]
