crates/nfdl-syntax/tests/snapshots/bitfield_if_snapshots__snapshot_conditional_field.snap
---
source: crates/nfdl-syntax/tests/bitfield_if_snapshots.rs
assertion_line: 47
expression: field_view(src)
---
[
    (
        "flags",
        U8,
        None,
    ),
    (
        "options",
        Bytes {
            len: Ident(
                "flags",
            ),
        },
        Some(
            "Binary { op: Gt, left: Ident(\"flags\"), right: Int(0) }",
        ),
    ),
]
