crates/nfdl-syntax/tests/snapshots/bitfield_if_snapshots__snapshot_loop_body_conditional_field.snap
---
source: crates/nfdl-syntax/tests/bitfield_if_snapshots.rs
expression: loop_body_field_view(src)
---
[
    (
        "opt",
        U16,
        Some(
            "Binary { op: Gt, left: Ident(\"flags\"), right: Int(0) }",
        ),
    ),
]
